improved gradle integration with javafx